force-app/main/default/objects/WorkOrderLineItem/fields/SVMXA360__EntitledPrice__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitledPrice__c</fullName>
    <description>This price indicates the negotiated price as per the Contract.</description>
    <label>Entitled Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>