force-app/main/default/objects/WorkOrderLineItem/fields/SVMXA360__LineType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LineType__c</fullName>
    <description>Picklist to specify the type of Work Order line item</description>
    <label>Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__LineType</valueSetName>
    </valueSet>
</CustomField>