force-app/main/default/objects/WorkOrderLineItem/fields/SVMXA360__Overtime__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Overtime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates work done outside of regular work hours</description>
    <label>Overtime</label>
    <type>Checkbox</type>
</CustomField>