force-app/main/default/objects/WorkOrderLineItem/fields/SVMXA360__TotalCost__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TotalCost__c</fullName>
    <description>Total price of the line item which is Unit Cost * Quantity.</description>
    <formula>SVMXA360__UnitCost__c  *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>